--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,20 +1,18 @@
-astroid==2.2.5
-Click==7.0
-ecdsa==0.13.2
-Flask==1.0.2
-Flask-SQLAlchemy==2.5.0
-future==0.17.1
-isort==4.3.18
-itsdangerous==1.1.0
-Jinja2==2.10.1
-lazy-object-proxy==1.4.0
-MarkupSafe==1.1.1
-mccabe==0.6.1
-pycryptodome==3.3.1
-pylint==2.3.1
-python-jose-cryptodome==1.3.2
-six==1.12.0
-typed-ast==1.4.2
-Werkzeug==0.15.6
-wrapt==1.11.1
-Flask-Cors==3.0.8
+astroid==3.2.2
+Click==8.1.7
+ecdsa==0.19.0
+Flask==3.0.3
+Flask-SQLAlchemy==3.1.1
+future==0.18.3
+isort==5.13.2
+itsdangerous==2.2.0
+Jinja2==3.1.4
+lazy-object-proxy==1.10.0
+MarkupSafe==2.1.5
+mccabe==0.7.0
+pylint==3.2.3
+python-jose==3.3.0
+six==1.16.0
+Werkzeug==3.0.3
+wrapt==1.16.0
+Flask-Cors==4.0.1
